@@ -4,6 +4,7 @@ EQEMu Changelog (Started on Sept 24, 2003 15:50)
 Vanicae: Fix for guild management window updates
 wheeljack: Fix for missing tradeskill favorites
 Vanicae: Tribute Focus, SE_DivineSave, SE_Flurry, SE_Accuracy
+wheeljack: Fix for losing items in world containers
 
 ==09/08/2010==
 gaeorn: fixes for new stricter version of gcc/glib
